name:                sleepchart-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/sleepchart-server#readme
license:             BSD3
license-file:        LICENSE
author:              Haruka Nakajima
maintainer:          haru2036@gmail.com
copyright:           2016 Haruka Nakajima
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
        Config
      , Models
      , Api
      , Api.User
      , Api.Sleep
 
  build-depends: 
        base 
      , aeson
      , bytestring
      , monad-control
      , monad-logger
      , mtl
      , time
      , persistent
      , persistent-postgresql
      , persistent-template
      , servant 
      , servant-js 
      , servant-server 
      , transformers
      , wai
      , wai-extra
      , warp

executable sleepchart-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sleepchart-server
                     , persistent-postgresql
                     , wai
                     , warp
                     , monad-logger
                     , safe
  default-language:    Haskell2010

test-suite sleepchart-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sleepchart-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sleepchart-server
